doc: Update comments in code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<!--TODO: Background should change according to all boards, not just Sprint's-->
+<!--TODO: * Do you want to handle this differently? -->
 <body class="general-status" data-bind="css: {failed: isCritical(), danger: isBad(), ok: isOk(), success: isIdeal()}">
   <header class="container">
     <img src="img/logo.png" alt="Southwest" class="logo header-content">
@@ -131,7 +131,7 @@
                 <!--<h2></h2>-->
             <!--</div>-->
             <div class="panel-body team-panel">
-                <!--TODO: Add team img -->
+                <!--TODO: * Supply team img -->
                 <img src="http://lorempixel.com/300/300/">
             </div>
         </div>
