--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
   <script src="js/lib/bootstrap.min.js"></script>
   <script src="js/lib/knockout-3.4.1.js"></script>
   <script src="js/dummyContent.js"></script>
+  <script src="js/classes.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
