--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.1.1.js"></script>
   <script src="../js/lib/knockout-3.4.1.js"></script>
-  <script src="../js/dummyContent.js"></script> <!-- this coul mess up tests. Remove it -->
-  <script src="../js/app.js"></script>
+  <script src="helper.js"></script>
+  <script src="../js/classes.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
