--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
   <script src="../js/lib/knockout-3.4.1.js"></script>
   <script src="helper.js"></script>
   <script src="../js/classes.js"></script>
+  <script src="../js/app.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
