--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="general-status" data-bind="css: {failed: projectStats.isCritical(), danger: projectStats.isBad(), ok: projectStats.isOk(), success: projectStats.isIdeal()}">
   <header class="container">
-    <img src="img/logo.png" alt="Southwest" class="logo header-content">
+    <img src="img/logo.png" alt="company logo" class="logo header-content">
     <h2 class="header-content">Team Board</h2>
   </header>
 
